boreal/tests/assets/invalid_files/parsing/regex_non_ascii_byte.yar
rule a {
    strings:
        $a = /[é]/
    condition:
        $a
}
